Homework8: Secure application
