# boot/src/main/java/ro/agilehub/javacourse/car/hire/boot/security/JwkSetController.java
@@ -1,0 +1,24 @@
+package ro.agilehub.javacourse.car.hire.boot.security;
+
+import com.nimbusds.jose.jwk.JWKSet;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+import java.util.Map;
+
+/**
+ * This controller uses a framework called nimbus to automatically expose a JWKSet URI
+ * The bean is configured in the AuthServerOAuth2Config
+ */
+@RestController
+public class JwkSetController {
+
+    @Autowired
+    private JWKSet jwkSet;
+
+    @GetMapping("/.well-known/jwks.json")
+    public Map<String, Object> keys() {
+        return this.jwkSet.toJSONObject();
+    }
+}
